systemd: stop waydroid session before starting it again
Signed-off-by: Bardia Moshiri <fakeshell@bardia.tech>

--- a/systemd/waydroid-session.service
+++ b/systemd/waydroid-session.service
@@ -6,4 +6,5 @@ ConditionPathExists=|/home/furios/.android_enable
 
 [Service]
 Type=simple
+ExecStartPre=-/usr/bin/waydroid session stop
 ExecStart=-/usr/bin/waydroid session start
