debian: Use new polkitd package
Prefer the new polkitd name but keep supporting policykit-1 for
older distros

Fixes: #1484

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Depends: ${misc:Depends},
          waydroid-sensors,
          python3-dbus,
          dbus,
-         policykit-1,
+         polkitd | policykit-1,
 	 iptables
 Description: Android™ application support
  waydroid allows running a separate Android™ environment
