treewide: drop whatever we are not using and don't need
Signed-off-by: Bardia Moshiri <bardia@furilabs.com>

--- a/data/Waydroid.desktop
+++ b/data/Waydroid.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Waydroid
-Exec=waydroid first-launch
+Exec=waydroid
 Icon=/usr/share/icons/hicolor/512x512/apps/waydroid.png
 Categories=X-WayDroid-App;
 X-Purism-FormFactor=Workstation;Mobile;
