--- a/systemd/waydroid-session.service
+++ b/systemd/waydroid-session.service
@@ -7,4 +7,6 @@ ConditionPathExists=|/home/furios/.android_enable
 [Service]
 Type=simple
 ExecStartPre=-/usr/bin/waydroid session stop
+ExecStartPre=-/usr/bin/gdbus wait -e org.gnome.SessionManager
+ExecStartPre=/usr/bin/sleep 5
 ExecStart=-/usr/bin/waydroid session start
