debian: add libglib2.0-bin to depends
Signed-off-by: Bardia Moshiri <bardia@furilabs.com>

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,8 @@ Depends: ${misc:Depends},
          python3-dbus,
          dbus,
          polkitd | policykit-1,
-	 iptables
+	 iptables,
+         libglib2.0-bin,
 Description: Android™ application support
  waydroid allows running a separate Android™ environment
  confined to a LXC container.
