clipboard: implement clipboard management logic and drop pyclip
Signed-off-by: Bardia Moshiri <bardia@furilabs.com>

--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Depends: ${misc:Depends},
          polkitd | policykit-1,
 	 iptables,
          libglib2.0-bin,
+         wl-clipboard,
 Description: Android™ application support
  waydroid allows running a separate Android™ environment
  confined to a LXC container.
